# EconAI

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
api-gateway/: CLAUDE.md  Dockerfile  pyproject.toml
api-gateway/app/: config.py  main.py
api-gateway/app/errors/: handlers.py
api-gateway/app/middleware/: audit.py  auth.py  rate_limit.py  rbac.py
api-gateway/app/routing/: proxy.py  registry.py
api-gateway/app/utils/: jwt_utils.py  request_id.py
api-gateway/tests/: conftest.py  test_audit.py  test_auth.py  test_rate_limit.py  test_rbac.py
celery/: CLAUDE.md  celery_app.py  celery_config.py
db/: CLAUDE.md  alembic.ini
deploy/: deploy.sh  manualstart.sh
doc/: detailed-design.md  devtools.md  high-level-design.md  manualstart.md  operation.md  prompt.md  proposal.md  rbac.md  todolist.md  upgrade2universial.md  usermanual.md
frontend/: CLAUDE.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.integrated.ts  vitest.config.mock.ts  vitest.config.ts
milvus/: CLAUDE.md  milvus.yaml
nginx/: nginx.conf
prometheus/: alerts.yml  prometheus.yml
redis/: redis.conf
services/citation-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/citation-service/citation_service/: __init__.py  app.py  config.py  formatter.py  models.py  parser.py  verifier.py
services/citation-service/tests/: __init__.py  test_api.py  test_citation_detail_and_filter.py  test_formatter.py  test_parser.py  test_verifier.py
services/document-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/document-service/document_service/: __init__.py  app.py  celery_app.py  config.py  db.py  errors.py  format_identifier.py  main.py  metadata_extractor.py  minio_client.py  models.py  state_machine.py  tasks.py  validation.py
services/document-service/document_service/chunker/: __init__.py  chunk_metadata.py  paragraph_splitter.py  section_splitter.py  token_counter.py
services/document-service/document_service/parsers/: __init__.py  base.py  email_parser.py  excel_parser.py  html_parser.py  image_extractor.py  markdown_parser.py  ocr_processor.py  pdf_parser.py  ppt_parser.py  router.py  word_parser.py
services/document-service/tests/: __init__.py  test_chunker.py  test_db.py  test_image_extraction.py  test_integration.py  test_metadata_extractor.py  test_ocr.py  test_parsers.py  test_reindex_and_filters.py  test_state_machine.py
services/kb-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/kb-service/kb_service/: __init__.py  app.py  bm25.py  config.py  deps.py  embedding.py  hybrid_search.py  indexer.py  lifecycle.py  milvus_store.py  qdrant_store.py  reranker.py  schemas.py  tokenizer.py  vector_store.py
services/kb-service/tests/: test_embedding.py  test_hybrid_search.py  test_indexer.py  test_isolation.py  test_rrf.py  test_search_error_handling.py  test_search_highlight_detail.py
services/llm-router/: CLAUDE.md  Dockerfile  models.yaml  pyproject.toml
services/llm-router/llm_router/: __init__.py  app.py  config.py  tracker.py
services/llm-router/llm_router/adapters/: __init__.py  claude_adapter.py  exceptions.py  local_adapter.py
services/llm-router/llm_router/models/: __init__.py  registry.py  schemas.py
services/llm-router/llm_router/routing/: __init__.py  circuit_breaker.py  engine.py
services/llm-router/tests/: __init__.py  conftest.py  test_claude_adapter.py  test_fallback.py  test_integration.py  test_local_adapter.py  test_retry_circuit_breaker.py  test_routing.py  test_truncation.py
services/orchestration-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/orchestration-service/orchestration_service/: __init__.py  agent_loop.py  app.py  config.py  progress.py  schemas.py  sensitivity.py  state.py  status_machine.py  task_workflows.py  tools.py  worker.py
services/orchestration-service/orchestration_service/templates/prompts/: literature_review.j2  policy_draft.j2  system_prompt.j2
services/orchestration-service/tests/: conftest.py  test_agent_loop.py  test_fallback.py  test_integration.py  test_sensitivity.py  test_status_machine.py  test_tools.py
services/output-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/output-service/output_service/: __init__.py  app.py  config.py  docx_gen.py  format_router.py  markdown_gen.py  minio_client.py  models.py  pptx_gen.py  template_loader.py  xlsx_gen.py
services/output-service/tests/: test_api.py  test_docx.py  test_markdown.py  test_pptx.py  test_templates.py  test_xlsx.py
services/user-service/: CLAUDE.md  Dockerfile  pyproject.toml
services/user-service/app/: audit_consumer.py  config.py  database.py  deps.py  main.py
services/user-service/app/models/: __init__.py  audit_log.py  consent.py  project.py  project_group.py  user.py
services/user-service/app/routers/: audit.py  auth.py  gdpr.py  groups.py  internal.py  projects.py  users.py
services/user-service/app/schemas/: __init__.py  audit.py  auth.py  group.py  project.py  user.py
services/user-service/app/services/: auth_service.py  ldap_service.py
services/user-service/tests/: conftest.py  test_auth_router.py  test_auth_service.py
shared/: CLAUDE.md  __init__.py  config.py  log_setup.py  metrics.py  minio_client.py  models.py  pyproject.toml
shared/tests/: __init__.py  test_config.py  test_models.py
templates/: CLAUDE.md
tests/: CLAUDE.md  __init__.py  conftest.py  policy_cn.txt  test_citation_confidence.py  test_document_reindex.py  test_integration_flows.py  test_kb_search_detail.py  test_kb_search_highlight.py  test_local_llm_task_debug.py  test_m1_gateway.py  test_m2_document.py  test_m2_document_operations.py  test_m3_kb.py  test_m4_orchestration.py  test_m5_llm_router.py  test_m5_ollama.py  test_m6_citation.py  test_m7_output.py  test_m7_output_export.py  test_m8_audit.py  test_m8_auth.py  test_m8_gdpr.py  test_m8_groups.py  test_m8_password_change.py  test_m8_projects.py  test_m8_user_admin.py  test_output_preview.py  (+6 more)
(+110 files in other folders)
