[project]
name = "policyai-api-gateway"
version = "1.0.0"
description = "PolicyAI M1 API Gateway"
readme = ""
requires-python = ">=3.12"
dependencies = [
    "policyai-shared>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
]

[tool.uv.sources]
policyai-shared = { path = "../shared" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "mypy>=1.14.0",
    "ruff>=0.8.0",
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false
files = ["app", "tests"]
exclude = ["__pycache__", ".venv"]

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]