[project]
name = "kb-service"
version = "0.1.0"
description = "EconAI Knowledge Base Service (M3)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "pymilvus>=2.4",
    "jieba>=0.42",
    "econai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_decorators = false
disable_error_code = ["misc", "no-any-return"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.uv.sources]
econai-shared = { path = "../../shared" }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
