[project]
name = "output-service"
version = "0.1.0"
description = "PolicyAI Output Generation Service (M7)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "minio>=7.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "policyai-shared",
    ]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.uv.sources]
policyai-shared = { path = "../../shared" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["no-untyped-call", "valid-type"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
