[project]
name = "econai-user-service"
version = "0.1.0"
description = "EconAI User & Permission Service (M8)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "bcrypt>=4.2.0",
    "pyjwt>=2.9.0",
    "python-ldap>=3.4.4",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.12",
    "econai-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.uv.sources]
econai-shared = { path = "../../shared" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
]

[tool.mypy]
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
exclude = ["alembic/", "tests/"]
files = ["app"]
namespace_packages = false

[tool.ruff]
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "E402"]

[tool.ruff.format]
quote-style = "double"